--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -18,7 +18,7 @@
   <body>
     <div class="container">
       <header>
-        <h1><a href="/posts">Posts</a></h1>
+        <h1><a href="/posts">Post</a></h1>
         <p><a href="/posts/new">Create a new post</a></p>
         <hr />
       </header>
