--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -19,7 +19,7 @@
     <div class="container">
       <header>
         <h1><a href="/posts">Post</a></h1>
-        <p><a href="/posts/new">Create a new post</a></p>
+        <p><a href="/posts/new">Create a new Post</a></p>
         <hr />
       </header>
       <main>
